--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   color: white;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 15px;
   overflow-x: hidden;
 }
